<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeatherWidgets</string>
    <string name="menu_settings">Einstesllungen</string>

    <string name="title_activity_info">Über...</string>
    <string name="title_activity_statistic">Statistiken</string>
    <string name="title_activity_widget_settings">Widget Einstellungen</string>
    <string name="title_activity_statistik_detail">Statistik Details</string>
    <string name="title_activity_widget_settings_detail">Widget Details</string>

    <!-- Allgemeine Texte und Beschriftungen -->
    <string name="wettercom_logo_description">Wetter.com Logo</string>
    <string name="btn_speichern">Speichern</string>
    <string name="btn_abbrechen">Abbrechen</string>
    <string name="typename_unknown">Widget</string>
    <string name="weekday_mon">Montag</string>
    <string name="weekday_tue">Dienstag</string>
    <string name="weekday_wed">Mittwoch</string>
    <string name="weekday_thu">Donnerstag</string>
    <string name="weekday_fri">Freitag</string>
    <string name="weekday_sat">Samstag</string>
    <string name="weekday_sun">Sonntag</string>
    <string name="weekday_now">Jetzt</string>
    <string name="weekday_tod">Heute</string>
    <string name="weekday_tom">Morgen</string>
    <string name="weekday_som">Folgender</string>
    <string name="caption_degree">°C</string>

    <!-- BEschriftungen für StatisticDetailActivity -->
    <string name="temp_max">MAX</string>
    <string name="temp_min">MIN</string>
    <string name="caption_Time">Datum</string>

    <!-- Beschriftungen für die MainActivity -->
    <string name="main_btn_info">Über...</string>
    <string name="main_btn_statistics">Statistiken</string>
    <string name="main_btn_widgets">Widgets</string>
    
    <!-- Beschriftungen für die InfoActivity -->
    <string name="info_lbl_version">App-Version</string>
    <string name="info_lbl_apilvl">Ihre API-Version</string>
    <string name="info_lbl_developer">Entwickler</string>
    <string name="info_lbl_poweredby">Powered by</string>
	<string name="info_lbl_project">Projekt</string>
	<string name="info_project">Diese App entstand im Rahmen einer Projektgruppenarbeit im Ausbildungsberuf Fachinformatiker FR: Anwendungsentwicklung\nProjektaufgabe:\nEntwickeln einer nativen Android App mit dem Android SDK unter Java\nSpezifisches Thema:\nDatenbankbasierende Wetter-Widget und -Statistik App - WeatherWidgets\n\nAlle Rechte vorbehalten\n(c) 2013</string>
    <string name="info_developers">Christian Freier\nJannik Kühnemundt\nMax Kroschewski\nStefan Kreutzer (Support@DaKirsche.eu)</string>
    
    <!-- Beschriftungen für die WidgetSettingDetailActivity -->
    <string name="wsd_enter_zip_or_city">Bitte geben Sie PLZ oder Stadt ein:</string>
    <string name="wsd_start_search">Suche starten</string>
    <string name="wsd_current_setup">Aktuelle Konfiguration</string>
    <string name="wsd_headline_optional_name">Widgetname (optional)</string>
    
    <!--  Aktionsschaltflächen für die Popupmenüs -->
    <string name="popup_btn_statistics">Statistiken</string>
    <string name="popup_btn_delete">Löschen</string>
    
    <!-- Widgetbezeichnungen -->
    <string name="widget_name_large">Großes Wetterwidget</string>
    <string name="widget_name_small">Kleines Wetterwidget</string>
    <string name="widget_name_forecast">3 Tagesvorhersage</string>
    <string name="widget_name_weatherclock">WeatherClock</string>
    <string name="widget_listup_name_large">WetterWidgets - Großes Wetterwidget</string>
    <string name="widget_listup_name_small">WetterWidgets - Kleines Wetterwidget</string>
    <string name="widget_listup_name_forecast">WetterWidgets - 3 Tagesvorhersage</string>
    <string name="widget_listup_name_weatherclock">WetterWidgets - Uhr und Wetter</string>

    <!-- Bezeichnungen für das StatistikSelectPopupMenu -->
    <string name="viewdepth_name_oneday">Tagesstatistik</string>
    <string name="viewdepth_name_threeday">3-Tagesstatistik</string>
    <string name="viewdepth_name_week">Wochenstatistik</string>
    <string name="viewdepth_name_month">Monatsstatistik</string>
    
    <!-- Fehlermeldungen für CustomImageToasts -->
    <string name="error_missing_citycode">Kein CityCode gefunden!\nStatistiken können nicht angezeigt werden.</string>
    <string name="error_no_cities_avaiable">Es sind keine Orte vorhanden, die angezeigt werden können!</string>
	<string name="error_no_widgets_avaiable">Es wurden keine Widgets gefunden!</string>
	<string name="error_no_search_input">Es wurde kein Suchtext eingegeben!</string>
	<string name="error_no_internet">Es ist keine Internetverbindung verfügbar!</string>
    <string name="error_no_widget_selected">Kein Widget für die Konfiguration gewählt!</string>
    <string name="error_no_city_found">Keine CityInformationen gefunden!</string>
    <string name="error_not_matching_widgetids">Das gewählte Widget konnte nicht identifiziert werden.</string>
    <string name="error_city_unknown">Zur gewählten Stadt liegen keine Informationen vor!</string>
    <string name="error_no_weatherdata_avaiable">Es sind keine Wetterinformationen zu dieser Stadt vorhanden!</string>
    <string name="error_please_connect_to_internet">Bitte stellen Sie Verbindung zum Internet her!</string>
    <string name="error_please_restart">Es ist ein Fehler aufgetreten. Bitte starten Sie die App erneut!</string>

    <!-- Success Meldungen für CustomImageToasts -->
    <string name="success_city_selected">Auswahl erfolgreich!</string>
    <string name="success_widget_saved">Widget gespeichert!</string>
    
    <!-- Strings für Wetterbezeichnungen lt Wettercode -->
    <string name="weather_code_unknown">Unbekannt</string>
    <string name="weather_code_sunny">Sonnig</string>
    <string name="weather_code_moony">Klar</string>
    <string name="weather_code_cloudy">Wolkig</string>
    <string name="weather_code_hardcloudy">Bewölkt</string>
    <string name="weather_code_fog">Nebel</string>
    <string name="weather_code_lightcloudy">leicht Bewölkt</string>
    <string name="weather_code_rainy">Regen</string>
    <string name="weather_code_stormy">Gewitter</string>
    <string name="weather_code_changing">Wechselhaft</string>
    <string name="weather_code_snowrain">Schneeregen</string>
    <string name="weather_code_snowy">Schnee</string>
    <string name="weather_code_lightlyrain">leichter Regen</string>

    <!-- Widget Fehlermeldungen -->
    <string name="widget_error_city">Ladefehler</string>
    <string name="widget_error_loading">Lade Daten...</string>
    <string name="widget_error_blank"></string>
    
</resources>
